--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+v1.6.1 - 03/05/2016 - Pierre Van Glabeke
+* lien footer
+* localisation
+* modif pagination
+* modifs css
+
 v1.6 - 08/04/2016 - Pierre Van Glabeke
 * héritage de thème, mustek
 * modifs css
