--- a/changelog
+++ b/changelog
@@ -1,3 +1,7 @@
+v1.6.2 - 02/11/2017 - Pierre Van Glabeke
+* correction connerie de renommage de simpleMenu ! ou l'art de faire chier le monde sans communiquer
+* modif footer (suppression liens validateurs)
+
 v1.6.1 - 03/05/2016 - Pierre Van Glabeke
 * lien footer
 * localisation
