--- a/changelog
+++ b/changelog
@@ -1,3 +1,10 @@
+v1.7 - 27/11/2019 - Pierre Van Glabeke
+* modifs html et css
+* dc2.15 requis
+
+v1.6.3 - 12/06/2018 - Pierre Van Glabeke
+* suppression date dans page et post
+
 v1.6.2 - 02/11/2017 - Pierre Van Glabeke
 * correction connerie de renommage de simpleMenu ! ou l'art de faire chier le monde sans communiquer
 * modif footer (suppression liens validateurs)
